
add_executable( easy_test easy_test.cpp )
add_test( easy easy_test )

add_executable( test_failure_test test_failure_test.cpp )
add_test( test_failure test_failure_test )

add_executable( test_driver_test test_driver_test.cpp )
add_test( test_driver test_driver_test )

add_executable( macro_tools_test macro_tools_test.cpp )
add_test( macro_tools macro_tools_test )
